@@ -8,6 +8,8 @@
 - Make it possible to update settings through API (only "storeResponses" for now) (https://github.com/dukeofharen/httplaceholder/pull/286).
 - Added option to set "storeResponses" in UI (https://github.com/dukeofharen/httplaceholder/pull/286).
 - Fixed bug where a lot of file watches were placed which were not necessary (https://github.com/dukeofharen/httplaceholder/pull/289).
+- Fixed small issue where explicitly defined response header would be overwritten when using the reverse proxy functionality (https://github.com/dukeofharen/httplaceholder/pull/290).
+- Added better error handling for the reverse proxy response writer (https://github.com/dukeofharen/httplaceholder/pull/291).
 
 # BREAKING CHANGES
 - Stubs defined in a .yml file should ALWAYS have an id field defined, whereas it was automatically generated beforehand if it was not set (which caused some non stub files to get parsed as stub with weird behavior).
